admission/ValidatingAdmissionPolicy/policies/hostnetwork/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostnetwork-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4d8ef6f6-a6aa-5cdc-aa65-050431083b71
  labels:
    hostnetwork.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    hostnetwork.security.kolteq.com/audit: 'false-true'
    hostnetwork.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostnetwork
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: hostnetwork.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostnetwork-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4d8ef6f6-a6aa-5cdc-aa65-050431083b71
  labels:
    hostnetwork.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/warn: enabled
    hostnetwork.security.kolteq.com/audit: 'false-true'
    hostnetwork.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: hostnetwork
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: hostnetwork.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostnetwork-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4d8ef6f6-a6aa-5cdc-aa65-050431083b71
  labels:
    hostnetwork.security.kolteq.com/warn: 'false-true'
    hostnetwork.security.kolteq.com/audit: 'false-true'
    hostnetwork.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostnetwork
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: hostnetwork.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostnetwork-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4d8ef6f6-a6aa-5cdc-aa65-050431083b71
  labels:
    hostnetwork.security.kolteq.com/audit: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    hostnetwork.security.kolteq.com/enforce: 'false-true'
    hostnetwork.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostnetwork
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: hostnetwork.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostnetwork-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4d8ef6f6-a6aa-5cdc-aa65-050431083b71
  labels:
    hostnetwork.security.kolteq.com/audit: 'false-true'
    security.kolteq.com/audit: enabled
    hostnetwork.security.kolteq.com/enforce: 'false-true'
    hostnetwork.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostnetwork
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: hostnetwork.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostnetwork-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4d8ef6f6-a6aa-5cdc-aa65-050431083b71
  labels:
    hostnetwork.security.kolteq.com/audit: 'false-true'
    hostnetwork.security.kolteq.com/enforce: 'false-true'
    hostnetwork.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostnetwork
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: hostnetwork.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostnetwork-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4d8ef6f6-a6aa-5cdc-aa65-050431083b71
  labels:
    hostnetwork.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    hostnetwork.security.kolteq.com/audit: 'false-true'
    hostnetwork.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostnetwork
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: hostnetwork.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostnetwork-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4d8ef6f6-a6aa-5cdc-aa65-050431083b71
  labels:
    hostnetwork.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/enforce: enabled
    hostnetwork.security.kolteq.com/audit: 'false-true'
    hostnetwork.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostnetwork
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: hostnetwork.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostnetwork-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4d8ef6f6-a6aa-5cdc-aa65-050431083b71
  labels:
    hostnetwork.security.kolteq.com/enforce: 'false-true'
    hostnetwork.security.kolteq.com/audit: 'false-true'
    hostnetwork.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostnetwork
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: hostnetwork.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
